--- a/content/index.html
+++ b/content/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Willet is an online crypto-currency wallet" />
   <title>Willet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css?family=Lato|Titillium+Web" rel="stylesheet">
   <link rel="icon" type="image/png" href="/assets/images/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="/assets/images/favicon-16x16.png" sizes="16x16" />
 </head>
