--- a/content/index.html
+++ b/content/index.html
@@ -8,6 +8,7 @@
   <title>Willet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=Lato|Titillium+Web" rel="stylesheet">
+  <link href="/assets/normalize.min.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="/assets/images/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="/assets/images/favicon-16x16.png" sizes="16x16" />
 </head>
