--- a/content/index.html
+++ b/content/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="robots" content="index, follow" />
-  <meta name="keywords" content="stellar network web app decentralized blockchain wallet cryptocurrency bitcoin ethereum transactions" />
-  <meta name="description" content="Willet is an online crypto-currency wallet" />
+  <meta name="keywords" content="stellar network web app decentralized blockchain wallet cryptocurrency bitcoin ethereum " />
+  <meta name="description" content="Willet is an online multi-crypto-currency wallet. It is simple to use, fast, decentralized and secured." />
   <title>Willet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=Lato|Titillium+Web" rel="stylesheet">
