Use minified build of instascan

--- a/content/index.html
+++ b/content/index.html
@@ -11,7 +11,8 @@
   <link href="/assets/normalize.min.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="/assets/images/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="/assets/images/favicon-16x16.png" sizes="16x16" />
-  <script src='https://www.google.com/recaptcha/api.js'></script>
+  <script src="https://www.google.com/recaptcha/api.js"></script>
+  <script src="/vendor/instascan.min.js"></script>
 </head>
 <body>
   <div id="app"></div>
